<resources>
    <string name="app_name">Task Nearby</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">Add Task</string>
    <string name="title_activity_add_new_task">Add a Task</string>
    <string name="title_activity_get_place_from_map">Select a Place</string>
    <string name="title_activity_saved_location_list">Saved Places</string>


    <string name="hint_input_task_name">Enter task\'s name</string>
    <string name="location">Select Location : </string>
    <string name="select_from_saved_places">Saved Places</string>
    <string name="select_from_map">Pick a place</string>
    <string name="or">OR</string>
    <string name="on">On</string>
    <string name="app_version">v3.5</string>
    <string name="developer">Developer</string>
    <string name="off">Off</string>
    <string name="alarm">Alarm</string>
    <string name="save">SAVE</string>
    <string name="expires">Expires :</string>
    <string name="turn_on_button">TURN ON</string>
    <string name="never">Never</string>
    <string name="remind_distance">Reminder Range : </string>
    <string name="unmark_done">Unmark as done</string>
    <string name="delete_command">DELETE</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="cancel_command">@android:string/cancel</string>
    <string name="mark_done">Mark as done</string>
    <string name="no_permissions_granted">Location access permission denied.\n The app won\'t work correctly.</string>
    <string name="gps_off">Location is turned off! To use the app with high accuracy please turn it on.\nDon\'t worry, Task Nearby uses advanced techniques to use GPS smartly and efficiently hence causing negligible battery drain.</string>
    <string name="gps_off_dialog_title">No Location</string>
    <string name="remind_dis_dialog_title">Reminder Range</string>
    <string name="remind_dis_dialog_hint_m">Range in m</string>
    <string name="remind_dis_dialog_hint_yd">Range in yd</string>
    <string name="default_remind_distance_yd">75 yd</string>

    <string name="local_service_started">Service Started</string>
    <string name="title_activity_detail">Task Details</string>
    <string name="title_activity_alarm">Task Nearby</string>
    <string name="developer_email_id">verma.yash8@gmail.com</string>

    <string name="pref_units_key">units</string>
    <string name="pref_units_default">Metric(m)</string>
    <string name="pref_units_metric">Metric(m)</string>
    <string name="pref_units_imperial">Imperial(yd)</string>
    <string-array name="pref_units_values">
        <item>Metric(m)</item>
        <item>Imperial(yd)</item>
    </string-array>

    <string-array name="pref_units_entries">
        <item>Metric(m)</item>
        <item>Imperial(yd)</item>
    </string-array>

    <string name="pref_units_label">Units</string>


    <string name="pref_interval_key">interval</string>
    <string name="pref_interval_default">5s</string>

    <string-array name="pref_interval_values">
        <item>5s(More Accurate)</item>
        <item>20s</item>
        <item>30s</item>
        <item>45s</item>
        <item>60s(Less Accurate)</item>
    </string-array>

    <string-array name="pref_interval_entries">
        <item>5s</item>
        <item>20s</item>
        <item>30s</item>
        <item>45s</item>
        <item>60s</item>
    </string-array>

    <string name="pref_interval_label">Location Update Interval</string>


    <string name="pref_status_key">status</string>
    <string name="pref_status_default">enabled</string>

    <string-array name="pref_status_values">
        <item>Enabled</item>
        <item>Disabled(No Reminders)</item>

    </string-array>

    <string-array name="pref_status_entries">
        <item>enabled</item>
        <item>disabled</item>
    </string-array>

    <string name="pref_status_label">Application Status</string>

    <string name="pref_tone_key">alarm_tone</string>
    <string name="pref_tone_default">Metric(m)</string>

    <string name="pref_accuracy_key">accuracy_pref</string>
    <string name="pref_accuracy_default">high</string>
    <string-array name="pref_accuracy_values">
        <item>High Accuracy(Recommended)</item>
        <item>Balanced Accuracy</item>
    </string-array>
    <string name="pref_accuracy_balanced">balanced</string>
    <string-array name="pref_accuracy_entries">
        <item>high</item>
        <item>balanced</item>
    </string-array>
    <string name="pref_accuracy_label">Location Accuracy</string>


    <string name="title_activity_about">About App</string>
    <string name="title_activity_help">Help</string>
    <string name="share_base_string">Hey!Try out the all new Task Nearby app.This app has awesome location based reminders.Download it from Google Play Store!
Visit: </string>
    <string name="help_content">How often do you pass right by the grocery store and forget to pick up milk? Have you ever headed to the airport to catch an international flight, only to realize your passport is back at home?
    \nGet Organised now by using Location Based Reminders present in Task Nearby App.
    As the name suggests, location-based reminders are notifications or alerts that are triggered when you (or really, your GPS-enabled smartphone) are in a particular place. \n\nFor example, you can set a location-based reminder that says, "Buy milk" the next time you walk or drive past your favorite grocery store.
        There are also location-based automations which can be used to define the range and much more!!</string>


    <string name="already_in_region">You are Already within the Selected region!</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="not_connected_internet">You\'re not connected to internet !</string>

</resources>
