<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.tasknearby.yashcreations.com.tasknearby.DetailActivity">

    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_teal_500_24dp"
          android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        app:showAsAction="always"
        android:icon="@drawable/ic_mode_edit_teal_500_24dp"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_name2"
        />
</menu>
