<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_new_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.tasknearby.yashcreations.com.tasknearby.NewTaskActivity"
    tools:showIn="@layout/activity_newtask">

    <LinearLayout
        android:id="@+id/newTaskBaseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/task_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_task_name"
            android:imeActionLabel="@string/hint_input_task_name"
            android:textColor="?android:attr/textColorPrimary"
            android:textColorHint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_marker_teal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="3dp">

            <LinearLayout
                android:id="@+id/select_from_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_saved_places_folder"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_from_saved_places"
                    android:textColor="@color/Peacock" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/or" />

            <LinearLayout
                android:id="@+id/pick_from_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_map"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_from_map"
                    android:textColor="@color/Peacock" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/locationNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name of selected place"
            android:inputType="textPersonName"
            android:visibility="visible" />
<!--
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#EEE9E9"
            />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/alarmLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:src="@drawable/ic_alarm_new" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alarm"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/alarm_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
        </LinearLayout>
<!--
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#EEE9E9"
         />-->

        <LinearLayout
            android:id="@+id/colorLLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:src="@drawable/ic_color_new" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Color : Tangerine"
                android:id="@+id/color_name_tv"
                android:textSize="18sp" />
        </LinearLayout>

    <!--    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#EEE9E9"
           />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/remindDistanceLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="2dp"
                android:src="@drawable/ic_remind_distance" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_distance"
                android:paddingRight="5dp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="75 m"
                android:layout_weight="1"
                android:textSize="18sp"
                android:id="@+id/remind_distance_tv"/>
        </LinearLayout>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:progress="12"
                android:id="@+id/seekbar"/>

        </LinearLayout>
-->
    </LinearLayout>
</ScrollView>
